Add color support for waypoint embeds and general code cleanup